--- a/new_transaction.html
+++ b/new_transaction.html
@@ -8,29 +8,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <title>Mini Project Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
+    <title>ECommerce</title>
 </head>
-<body>
+<body style="background-color: #a9f7b7;">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Mini Project Store</a>
+          <a class="navbar-brand" style="font-weight: bold;" href="#">ECommerce</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" style="font-weight: bold;" href="index.html">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="items.html">Items</a>
+                <a class="nav-link" style="font-weight: bold;" href="items.html">Shoe Items</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customers.html">Customers</a>
+                <a class="nav-link" style="font-weight: bold;" href="customers.html">Customers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="transactions.html">Transactions</a>
+                <a class="nav-link" style="font-weight: bold;" href="transactions.html">CheckOut</a>
               </li>
             </ul>
           </div>
@@ -38,13 +40,15 @@
     </nav>
 
     <div class="container mt-3">
-      <h1>New Transaction</h1>
+      <h1>New CheckOut</h1>
       <hr>
 
       <div class="row">
         <div class="col-md-3">
-          <h3>Transaction Details</h3>
+          <h3>CheckOut Details</h3>
 
+          <div class="card">
+            <div class="card-body text-white" style="background-color: #082032;">
           <div class="mb-3">
             <label for="invoice_no">Invoice Number</label>
             <input type="text" id="invoice_no" class="form-control">
@@ -60,6 +64,8 @@
           <div class="mb-3">
             <label for="remarks">Remarks</label>
             <input type="text" id="remarks" class="form-control">
+          </div>
+            </div>
           </div>
 
         </div>
@@ -80,10 +86,11 @@
             </button>
           </div>
 
-          <h3>Transaction Items</h3>
+          <h3>CheckOut Items</h3>
           <hr>
-
-          <table class="table table-striped">
+          <div class="card">
+            <div class="card-body text-white" style="background-color: #082032;">
+          <table class="table table-dark text-white">
             <thead>
               <tr>
                 <th>Item</th>
@@ -102,10 +109,12 @@
             </tfoot>
           </table>
         </div>
+        </div>
+        </div>
       </div>
       <hr>
       <button class="float-end btn btn-lg btn-primary" id="save_transaction">
-        <i class="fa fa-save"></i> Save Transaction
+        <i class="fa fa-save"></i> Save CheckOut
       </button>
     </div>
 
