--- a/show_customer.html
+++ b/show_customer.html
@@ -6,31 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <title>Mini Project Store</title>
+    <title>ECommerce</title>
 </head>
-<body>
+<body style="background-color: #a9f7b7;">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Mini Project Store</a>
+          <a class="navbar-brand"  style="font-weight: bold;" href="#">ECommerce</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link"  style="font-weight: bold;" href="index.html">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="items.html">Items</a>
+                <a class="nav-link" style="font-weight: bold;" href="items.html">Shoe Items</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customers.html">Customers</a>
+                <a class="nav-link" style="font-weight: bold;" href="customers.html">Customers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="transactions.html">Transactions</a>
+                <a class="nav-link" style="font-weight: bold;" href="transactions.html">CheckOut</a>
               </li>
             </ul>
           </div>
@@ -39,43 +40,41 @@
 
     <div class="container mb-4">
 
-      <!-- Breadcrumb -->
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb mt-2">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item"><a href="customers.html">Customers</a></li>
-          <li class="breadcrumb-item active" aria-current="page">View Customer | <span class="customer_name"></span></li>
-        </ol>
-      </nav>
-
       <h1 class="customer_name"></h1>
       <hr>
       <div class="row">
         <div class="col-md-4">
-          <h3>Customer Details</h3>
+          <h3>Buyer Details</h3>
           <hr>
+          <form>
+            <div class="card">
+            <div class="card-body" style="background-color: #082032;">
+          <div class="mb-3 text-white">
+            <label for="id">ID</label>
+            <input type="id" id="id" class="form-control">
+          </div>
 
-          <div class="mb-3">
+          <div class="mb-3 text-white">
             <label for="last_name">Last Name</label>
             <input type="text" id="last_name" class="form-control">
           </div>
 
-          <div class="mb-3">
+          <div class="mb-3 text-white">
             <label for="first_name">First Name</label>
             <input type="text" id="first_name" class="form-control">
           </div>
 
-          <div class="mb-3">
+          <div class="mb-3 text-white">
             <label for="address">Address</label>
             <input type="text" id="address" class="form-control">
           </div>
 
-          <div class="mb-3">
+          <div class="mb-3 text-white">
             <label for="phon">Phone</label>
             <input type="text" id="phone" class="form-control">
           </div>
 
-          <div class="mb-3">
+          <div class="mb-3 text-white">
             <label for="credit_limit">Credit Limit</label>
             <input type="number" id="credit_limit" class="form-control">
           </div>
@@ -114,6 +113,9 @@
                   </form>
                 </div>
               </div>
+          </div>
+        </div>
+
             </div>
 
           </div>
@@ -121,7 +123,9 @@
         <div class="col-md-8">
           <h3>Transaction History</h3>
           <hr>
-          <table class="table table-striped">
+          <div class="card">
+            <div class="card-body" style="background-color: #082032;">
+          <table class="table table-dark text-white">
             <thead>
               <tr>
                 <th>Date</th>
@@ -132,6 +136,8 @@
             </thead>
             <tbody id="transactions"></tbody>
           </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
