--- a/temp.html
+++ b/temp.html
@@ -6,31 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <title>Mini Project Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>ECommerce</title>
 </head>
-<body>
+<body style="background-color: #a9f7b7;">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Mini Project Store</a>
+          <a class="navbar-brand" style="font-weight: bold;" href="#">ECommerce</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" style="font-weight: bold;" href="index.html">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="items.html">Items</a>
+                <a class="nav-link" style="font-weight: bold;" href="items.html">Shoe Items</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="customers.html">Customers</a>
+                <a class="nav-link" style="font-weight: bold;" href="customers.html">Customers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="transactions.html">Transactions</a>
+                <a class="nav-link" style="font-weight: bold;" href="transactions.html">CheckOut</a>
               </li>
             </ul>
           </div>
